Frontend issues solved and successfully built!
