# project-management-frontend/openapi/website-apis.json
@@ -282,6 +282,50 @@
         }
       }
     },
+    "/api/projects/{id}/status": {
+      "put": {
+        "tags": [
+          "project-controller"
+        ],
+        "operationId": "updateProjectStatus",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "additionalProperties": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/teams": {
       "post": {
         "tags": [
